adapter moved to view folder as its belongs to view

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">NyTimes</string>
+    <string name="app_name">Top Books</string>
     <string name="action_settings">Settings</string>
     <string name="section_format">Hello World from section: %1$d</string>
     <string name="api_key">uj85TmuRvmTXkz5HCjby6h8uQHR0vMG4</string>
